<resources>
    <string name="app_name" translatable="false">Asteroides</string>
    <string name="main_title">Asteroids</string>
    <string name="start">Play</string>
    <string name="config">Configure</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="exit">Exit</string>
    <string name="about_us_text">This program has been developed as an example in the course of Android to demonstrate how you can launch new activities from the main activity.</string>
    <string name="lastScores">Last Scores</string>
    <string name="menu_search">Search</string>

    <string name="asteroids_fragments_summary">how many pieces an asteroid is divided (%1$d)</string>
    <string name="asteroids_fragments_title">Number of Fragments</string>
    <string name="connexion_type_title">Connexion Type</string>
    <string name="graphic_type_summary">Choose the graphics representation</string>
    <string name="graphic_type_title">Graphics Type</string>
    <string name="has_multiplayer_title">Enable Multiplayer</string>
    <string name="has_music_summary">play background music</string>
    <string name="has_music_title">Enable Music</string>
    <string name="max_players_title">Max number of players</string>
    <string name="multiplayer_section_title">Multiplayer Mode</string>
    <string name="fragments_error_in_input_value">The number of fragments must be between 0 and 9</string>
    <string name="fragments_error_in_input_type">Has to be a number</string>
    <string name="on_item_selected">Selection: %1$d - %2$s</string>
    <string name="has_limit_missiles_title">Limit Missiles to 3</string>
    <string name="has_limit_missiles">Only allow 3 missiles at the same time</string>
    <string name="show_preferences">Show Preferences</string>
    <string name="txt_won">GameOver!!!</string>
    <string name="txt_score">Your score is %1$d</string>
    <string name="lbl_nickname">Write HERE your Nickname</string>
    <string name="btn_accept">Accept</string>
    <string name="txt_loose">Ohhhh Sooo Close</string>
    <string name="txt_loose_extraline">Best luck next time :)</string>
    <string name="txt_no_score_1">No Scores yet</string>
    <string name="txt_no_score_2">Beat the game and put your score here</string>
    <string name="score_storage_summary">Select the storage type for your scores</string>
    <string name="score_storage_title">Storage of the scores</string>
    <string name="sd_no_write">Can not write to external memory</string>
    <string name="sd_no_read">Can not read in external memory</string>
    <string name="external_storage_title">External storage unit</string>
    <string name="external_storage_summary">Select in which external storage unit the scores will be saved</string>
    <string name="no_permission_external_storage">No permission is granted to use external storage, preferences will be used instead</string>
    <string name="title_activity_converter">ConverterActivity</string>
    <string name="converter">Converter</string>
    <string name="external_url_summary">Custom web service host</string>
    <string name="external_url_title">Custom server</string>
    <string name="input_type_summary">Select the valid inputs for the game</string>
    <string name="input_type_title">Inputs</string>
    <string name="external_url_default_summary">Use the default Web Service</string>
    <string name="external_url_default_title">Default Web Service</string>
</resources>