<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.settings.PreferencesActivity"
    android:key="main_preferences">

    <CheckBoxPreference
        android:key="hasMusic"
        android:defaultValue="true"
        android:summary="@string/has_music_summary"
        android:title="@string/has_music_title" />
    <CheckBoxPreference
        android:key="limitMissiles"
        android:defaultValue="true"
        android:summary="@string/has_limit_missiles"
        android:title="@string/has_limit_missiles_title" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tiposGraficos"
        android:entryValues="@array/tiposGraficosValores"
        android:key="graphicType"
        android:summary="@string/graphic_type_summary"
        android:title="@string/graphic_type_title" />

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="fragments"
        android:summary="@string/asteroids_fragments_summary"
        android:title="@string/asteroids_fragments_title" />

    <MultiSelectListPreference
        android:defaultValue="@array/inputTypesValues"
        android:key="validInputs"
        android:entries="@array/inputTypes"
        android:entryValues="@array/inputTypesValues"
        android:summary="@string/input_type_summary"
        android:title="@string/input_type_title"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/scoreStorage"
        android:entryValues="@array/scoreStorageValues"
        android:key="scoreStorage"
        android:summary="@string/score_storage_summary"
        android:title="@string/score_storage_title" />

    <ListPreference
        android:key="externalStorage"
        android:summary="@string/external_storage_summary"
        android:title="@string/external_storage_title" />

    <CheckBoxPreference
        android:key="useDefaultWebservice"
        android:defaultValue="true"
        android:summary="@string/external_url_default_summary"
        android:title="@string/external_url_default_title" />

    <EditTextPreference
        android:key="customWebservice"
        android:defaultValue="https://testscores.000webhostapp.com"
        android:inputType="textUri"
        android:summary="@string/external_url_summary"
        android:title="@string/external_url_title"/>

    <!--

Los URL por defecto son

https://testscores.000webhostapp.com/puntuaciones/lista.php
https://testscores.000webhostapp.com/puntuaciones/nueva.php

    -->

    <!--
    <PreferenceCategory
        android:title="@string/multiplayer_section_title">
        <CheckBoxPreference
            android:key="hasMultiplayer"
            android:defaultValue="false"
            android:title="@string/has_multiplayer_title" />

        <EditTextPreference
            android:defaultValue="2"
            android:inputType="number"
            android:key="maxPlayers"
            android:title="@string/max_players_title" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/connectionTypes"
            android:entryValues="@array/connectionTypesValues"
            android:key="connexionType"
            android:title="@string/connexion_type_title" />

    </PreferenceCategory>
    -->
</PreferenceScreen>


