<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="30dp"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/main_title"
        android:textSize="45sp"
        android:textColor="@android:color/white"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="launchGame"
        android:text="@string/start"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/btn_config"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:onClick="launchPreferences"
        android:text="@string/config"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="launchLastScores"
        android:text="@string/lastScores" />


</LinearLayout>