<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_show_preferences"
        android:orderInCategory="15"
        android:title="@string/show_preferences"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="5"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_about_us"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        android:title="@string/about"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="115"
        android:title="@string/Search"
        app:showAsAction="always|collapseActionView" />

</menu>